--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,10 @@
               "src/assets/css/owl.carousel.min.css",
               "src/assets/css/slicknav.min.css",
               "src/assets/css/jquery-ui.min.css",
-              "src/assets/css/sb-admin-2.min.css"
+              "src/assets/css/sb-admin-2.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css"
             ],
             "scripts": [
               "src/assets/js/jquery-3.3.1.min.js",
