--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@angular/compiler": "16.2.12",
     "@angular/core": "16.2.12",
     "@angular/forms": "16.2.12",
+    "@angular/localize": "16.2.12",
     "@angular/platform-browser": "16.2.12",
     "@angular/platform-browser-dynamic": "16.2.12",
     "@angular/router": "16.2.12",
-    "@angular/localize": "16.2.12",
     "@auth0/angular-jwt": "^5.1.2",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
@@ -30,6 +30,8 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "font-awesome": "^4.7.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^16.9.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
